--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1",
+    "react-router": "^7.6.2",
     "react-router-dom": "^7.5.3",
     "sass": "^1.87.0"
   },
